--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "A Strapi application",
   "scripts": {
     "dev": "strapi develop",
+    "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
     "strapi": "strapi"
@@ -15,6 +16,7 @@
     "@strapi/plugin-users-permissions": "4.13.5",
     "@strapi/strapi": "4.13.5",
     "better-sqlite3": "8.5.0",
+    "mysql": "^2.18.1",
     "strapi-content-type-explorer": "^0.1.1"
   },
   "author": {
