[DOCS] mysql 초기 세팅 관련 문서 추가 #4

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,16 @@ API_TOKEN_SALT=tobemodified
 ADMIN_JWT_SECRET=tobemodified
 TRANSFER_TOKEN_SALT=tobemodified
 JWT_SECRET=tobemodified
+HOST=0.0.0.0
+
+# if Database is sqlite
+DATABASE_CLIENT=sqlite
+DATABASE_FILENAME=.tmp/data.db
+
+# if Database is mysql
+DATABASE_CLIENT=mysql
+DATABASE_HOST=tobemodified(0.0.0.0)
+DATABASE_PORT=tobemodified(0000)
+DATABASE_NAME=tobemodified
+DATABASE_USERNAME=tobemodified
+DATABASE_PASSWORD=tobemodified
