--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@strapi/strapi": "4.13.5",
     "better-sqlite3": "8.5.0",
     "mysql": "^2.18.1",
-    "strapi-content-type-explorer": "^0.1.1"
+    "strapi-content-type-explorer": "^0.1.1",
+    "strapi-plugin-entity-relationship-chart": "^4.1.0"
   },
   "author": {
     "name": "A Strapi developer"
