[FEAT] 컨테이너간 통신을 위한 네트워크 추가

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,10 @@ services:
       MYSQL_DATABASE: ${DATABASE_NAME}
     volumes:
       - ./.db:/var/lib/mysql
+    networks:
+      - backend
+
+networks:
+  backend:
+    external: true
+    
