--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,6 @@ DATABASE_PORT=tobemodified(0000)
 DATABASE_NAME=tobemodified
 DATABASE_USERNAME=tobemodified
 DATABASE_PASSWORD=tobemodified
+
+# tag Database
+TAG_API_HOST=tobemodified
