[STYLE] 자동생성파일 제외

--- a/.env.example
+++ b/.env.example
@@ -20,4 +20,4 @@ DATABASE_USERNAME=tobemodified
 DATABASE_PASSWORD=tobemodified
 
 # tag Database
-TAG_API_HOST=tobemodified
+TAG_API_HOST=tobemodified(localhost:1234/api)
